syntax = "proto3";

package grpc.ghostcache;
option java_package       = "grpc.ghostcache";
option java_multiple_files = true;

/**
 * DekCacheService stores wrapped DEKs (output of Key Vault `wrapKey()`).
 */
service DekCacheService {
  rpc GetDek    (GetDekRequest)    returns (GetDekReply);
  rpc PutDek    (PutDekRequest)    returns (PutDekReply);
  rpc DeleteDek (DeleteDekRequest) returns (DeleteDekReply);
}

/* ─────────── Messages ────────────────────────────────────────────────── */

message GetDekRequest {
  string key_id = 1;
}

message GetDekReply {
  bool  found        = 1;
  bytes wrapped_key  = 2;  // empty if not found
  int32 ttl_sec_left = 3;  // 0 when no TTL / not found
}

message PutDekRequest {
  string key_id      = 1;
  bytes  wrapped_key = 2;
  int32  ttl_sec     = 3;  // 0 = no expiry
}

message PutDekReply {
  bool ok = 1;
}

message DeleteDekRequest {
  string key_id = 1;
}

message DeleteDekReply {
  bool ok = 1;
}
