syntax = "proto3";

package grpc.ghostcache;
option java_package       = "grpc.ghostcache";
option java_multiple_files = true;

// ─── NEW  Session service ─────────────────────────────────────────────────
service SessionService {
  rpc GetSession   (GetSessionRequest)    returns (GetSessionReply);
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionReply);
  rpc PutSession   (PutSessionRequest)    returns (PutSessionReply);
}

// ─── Session messages ─────────────────────────────────────────────────────

message GetSessionRequest    { string session_id = 1; }
message GetSessionReply      { bool valid = 1; bytes payload = 2; }

message DeleteSessionRequest { string session_id = 1; }
message DeleteSessionReply   { bool ok = 1; }

message PutSessionRequest   { string session_id = 1; bytes payload = 2; int32 ttlSec = 3; }


message PutSessionReply    { bool ok = 1; }
